# image_spritesheet_editor_qt_cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  buildUiHeaders.bat  resources.qrc
resources/: MainWindow.ui
scripts/: generateUiHeaders.ps1
src/: CMakeLists.txt  MainApp.cpp  MainApp.h
